@@ -19,6 +19,7 @@ Version 1.25  2010-01-27
  * storage status sync modified (the code of tracker and storage both changed)
  * when recv kill signal, worker thread quit more quickly
  * remove compile warning info of logError
+ * tracker server start more quickly with many groups and storage servers
 
 Version 1.24  2010-01-06
  * call php_fdfs_close with TSRMLS_CC as php_fdfs_close(i_obj TSRMLS_CC)
